# PPO-2DGrid

./: .gitignore  README.md  evaluate_meta.py  pyproject.toml  test.py  train.py  train.sh  train_fomaml.py
fomaml/: analyze_fomaml_distribution.py  fomaml_evaluate.py  fomaml_train.py  fomaml_visualization.py  train_fomaml.sh  utils.py
ppo/: analyze_ppo_distribution.py  ppo_train.py  ppo_visualization.py  test.py  train.py  train.sh  train_ppo.sh
src/: __init__.py  actor_critic.py  analyze_meta.py  analyze_tasks.py  distribution_over_tasks.py  fomaml.py  ppo.py  rollout_buffer.py  sweep_checkpoints.py  utils.py
src/config/: agent.yaml  scenario.yaml
src/custom_envs/: base_env.py  easy_env.py  hard_env.py  hardest_env.py  medium_env.py  medium_hard_env.py  register.py
src/meta/: maml_vpg.py  meta_utils.py  task_sampler.py
src/metrics/: ppo_metrics.py  task_metrics.py
src/scenario_creator/: scenario_creator.py
src/tests/: test_custom_envs.py  test_visualize_envs.py
src/utils/: utils.py  utils_rl.py
src/wrappers/: stuck_penalty_wrapper.py  three_action_wrapper.py
